bug 715507 - GlobalHistory is accessing Gecko on the wrong thread  r=dougt,kats